--- a/scholar-web/src/main/webapp/index.html
+++ b/scholar-web/src/main/webapp/index.html
@@ -45,5 +45,12 @@
   	</div>
 
 </div>
+
+<!--  TODO: 1. Dashboards
+2. form based managers CRUD
+3. controllers/ save-edit option
+4. staff/student attendance save option
+5. time-table generation
+6. leave system to be fixed  -->
 	
 </html>
